--- a/templates/index.html
+++ b/templates/index.html
@@ -1,1 +1,16 @@
-<h1>Hello World!</h1>
+{% extends "/user.html" %}
+
+{% block title %}Menu{% endblock %}
+
+{% block content %}
+<div class="container">
+    <div class="page-header">
+        <h1>Hallo, {{ name }}!</h1>
+    </div>
+	<div class="page-body">
+		<p> 안녕하세요. 처음 방문하신 분은 계정을 만들어주세요.</p>
+		<p> 동의서 </p>
+	</div>
+</div>
+{% endblock %}
+
