--- a/templates/user.html
+++ b/templates/user.html
@@ -1,6 +1,6 @@
 {% extends "bootstrap/base.html" %}
 
-{% block title %}Menu{% endblock %}
+{% block title %}Main Page{% endblock %}
 
 {% block navbar %}
 <div class="navbar navbar-inverse" role="navigation">
