--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,7 +5,12 @@
 
 {% block page_content %}
 <div class="page-header">
-    <h1>Hi, {% if name %}{{ name }}{% else %}Stranger{% endif %}!</h1>
+    <h1>Hello, 
+		{% if current_user.is_authenticated %}
+			{{ current_user.username }}
+		{% else %}
+			Stranger
+		{% endif %}!</h1>
 	{% if not known %}
 	<p> Pleased to meet you. If this is not your first visit, or if your name is wrongly presented above, please contact via (isbead@gmail.com, 010-9628-1336). </p>
 	{% else %}
