--- a/app/templates/lecture/class_n.html
+++ b/app/templates/lecture/class_n.html
@@ -7,18 +7,17 @@
 <div class="page-header">
 	<h1> {{ user.username }} </h1>
 	<h1> {{ user.codename }}
+		
 	{% if user.name or user.code %}
 	<p>
-			{% if user.name%}{{ user.name }}{% endif %}
-			{% if user.code %}{{ user.code }}
-		{% endif %}
+		{% if user.name%}{{ user.name }}{% endif %}
+		{% if user.code %}{{ user.code }}{% endif %}
 	</p>
 	{% endif %}
-	{% if current_user.is_administrator() %}
-	<p><a href="mailto:{{ user.email }}">{{ user.email }} </a></p>
-	<p> Member since {{ moment (user.member_since).format(
-		'L') }}.
-		Last seen {{ moment(user.last_seen).fromNow() }}
+	<!-- {% if current_user.is_administrator() %}
+	<p><a href="mailto:{{ user.email }}">{{ user.email }}{% endif %}
+ </a></p> -->
+	<p> 
 	</p>
 </div>
 
@@ -26,66 +25,63 @@
 <!--vdieo -->
 <div class="page-body">
     <!-- 1. The <iframe> (and video player) will replace this <div> tag. -->
-    <div id="player">
-		<video width = "320" height = "240" controls>
-			<script src = "https://youtu.be/wy_LFkWRjkg">
-			<script>
-   // 3. This function creates an <iframe> (and YouTube player)
-        //    after the API code downloads.
-    var player;
-    function onYouTubeIframeAPIReady() {
-      player = new YT.Player('player', {
-        height: '390',
-        width: '640',
-        videoId: 'M7lc1UVf-VE',
-        events: {
-          'onReady': onPlayerReady,
-          'onStateChange': onPlayerStateChange
-        }
-      });
-    }
+    <div id="player"></div>
+		<script>
+		// 2. This code loads the IFrame Player API code asynchronously.
+		var tag = document.createElement('script');
+		tag.src = "https://www.youtube.com/iframe_api";
+		var firstScriptTag = document.getElementsByTagName('script')[0];
+		firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
+		
+		
+		
+		// 3. This function creates an <iframe> (and YouTube player)
+		        //    after the API code downloads.
+	    var player;
+	    function onYouTubeIframeAPIReady() {
+	      player = new YT.Player('player', {
+	        height: '585',
+	        width: '960',
+	        videoId: 'KmDYXaaT9sA',
+	        events: {ㄴ
+	          'onReady': onPlayerReady,
+	          'onStateChange': onPlayerStateChange
+	        }
+	      });
+	    }
 
 
-    // 4. The API will call this function when the video player is ready.
-    function onPlayerReady(event) {
-      event.target.playVideo();
-    }
+	    // 4. The API will call this function when the video player is ready.
+	    function onPlayerReady(event) {
+	      event.target.playVideo();
+	    }
+
+		// 5. The API calls this function when the player's state changes.
+		//    The function indicates that when playing a video (state=1),
+		//    the player should play for six seconds and then stop.
+		var done = false;
+		function onPlayerStateChange(event) {
+			if (event.data == YT.PlayerState.PLAYING && !done) {
+				//setTimeout(stopVideo)(X) when video all played
+				//show "next"	
+		  	  setTimeout(stopVideo, 6000);
+			  done = true;
+			}``
+		}
+		
 	
-	// 5. The API calls this function when the player's state changes.
-	//    The function indicates that when playing a video (state=1),
-	//    the player should play for six seconds and then stop.
-	var done = false;
-	function onPlayerStateChange(event) {
-	if (event.data == YT.PlayerState.PLAYING && !done) {
-	//setTimeout(stopVideo)(X) when video all played
-	//show "next"	
-	  setTimeout(stopVideo, 6000);
-	  done = true;
-	}
-	}
-	function stopVideo() {
-	player.stopVideo();
-	}
+		
+		onYouTubeIframeAPIReady()
+		onPlayerReady()
+		loadVideoById({'videoId': 'KmDYXaaT9sA',
+		               'startSeconds': 0,
+		               'endSeconds': 6000,
+		               'suggestedQuality': 'large'});		
+
 	</script>
+					   
+	<!-- player -->	
+				   
 </div>
 {% endblock %}
-	
-	
-	
 
-	
-
-	//
-	// 	<source src="movie.mp4" type="video/mp4">
-	// 	Your browser does not support the video tag.
-	// </video>
-	<p><strong>Note:</strong> The video tag is not supported in Internet Explorer 8 and earlier versions.</p>
-</div>
-
-
-
-
-
-
-{{ wtf.quick_form(form) }}
-{% endblock %}
