--- a/app/templates/lecture/class_s.html
+++ b/app/templates/lecture/class_s.html
@@ -1,90 +1,93 @@
 {% extends "base.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
-<a href="class_s.html" id="" title="class_s">class_s</a>
-{% block title %}Classroom{% endblock %}
+<a href="class_n.html" id="" title="class_n">class_s</a>
+{% block title %}Exprmnt{% endblock %}
 
 {% block page_content %}
-<div class="page-hearder">
+<div class="page-header">
 	<h1> {{ user.username }} </h1>
 	<h1> {{ user.codename }}
+		
 	{% if user.name or user.code %}
 	<p>
-			{% if user.name%}{{ user.name }}{% endif %}
-			{% if user.code %}{{ user.code }}
-		{% endif %}
+		{% if user.name%}{{ user.name }}{% endif %}
+		{% if user.code %}{{ user.code }}{% endif %}
 	</p>
 	{% endif %}
-	{% if current_user.is_administrator() %}
-	<p><a href="mailto:{{ user.email }}">{{ user.email }} </a></p>
-	<p> Member since {{ moment (user.member_since).format(
-		'L') }}.
-		Last seen {{ moment(user.last_seen).fromNow() }}
-	</p>
-
-<script type = "text/javascript">
-
-//lightbulbs 만드는 법
-function lightbulbs(src, width, height, alt, number) {
-	this.src = "../../static/offline.png";
-	this.width = "50"; 
-	this.height ="50"; 
-	this.alt = "user status"
-	this.number = 0
-}
-
-
-//lightbulb 바꾸는 법
-function changeImage() {
-	x = Math.floor(Math.random() * 100) + 1
-	var images = ["../../static/online.png","../../static/offline.png"]
-	
-	var renew = setInterval(function() {
-		//online
-		if (x%2 == 0) {
-			document.getElementByClassName("lightbulb").src = images[0];
-		}
-		
-		//offline	
-		else {
-			document.getElementByClassName("lightbulb").src = images[1];
-		}
-	}, 30000);	
-}
-
-
-function fadeImg(el, val, fade) {
-	if(fade === true) {
-		el.style.opacity = val/100;
-		seTimeout(function(){fadeImg(el, val, fade);}, 10);		
-	}
-}
-	
-</script>
-	
-<div class="page-social">
+	<!-- {% if current_user.is_administrator() %}
+	<p><a href="mailto:{{ user.email }}">{{ user.email }}{% endif %}
+ </a></p> -->
 	<p> 
-<script type = "text/javascript">
-		for (var i=0, i < 10, i++) {
-			lightbulbs(src, width, height, alt, i);
+	</p>
+</div>
+
+<div class=social_>
+	<script>
+		
+	</script>
+/div>
+
+
+<!--vdieo -->
+<div class="page-body">
+    <!-- 1. The <iframe> (and video player) will replace this <div> tag. -->
+    <div id="player"></div>
+		<script>
+		// 2. This code loads the IFrame Player API code asynchronously.
+		var tag = document.createElement('script');
+		tag.src = "https://www.youtube.com/iframe_api";
+		var firstScriptTag = document.getElementsByTagName('script')[0];
+		firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
+		
+		
+		
+		// 3. This function creates an <iframe> (and YouTube player)
+		        //    after the API code downloads.
+	    var player;
+	    function onYouTubeIframeAPIReady() {
+	      player = new YT.Player('player', {
+	        height: '585',
+	        width: '960',
+	        videoId: 'KmDYXaaT9sA',
+	        events: {ㄴ
+	          'onReady': onPlayerReady,
+	          'onStateChange': onPlayerStateChange
+	        }
+	      });
+	    }
+
+
+	    // 4. The API will call this function when the video player is ready.
+	    function onPlayerReady(event) {
+	      event.target.playVideo();
+	    }
+
+		// 5. The API calls this function when the player's state changes.
+		//    The function indicates that when playing a video (state=1),
+		//    the player should play for six seconds and then stop.
+		var done = false;
+		function onPlayerStateChange(event) {
+			if (event.data == YT.PlayerState.PLAYING && !done) {
+				//setTimeout(stopVideo)(X) when video all played
+				//show "next"	
+		  	  setTimeout(stopVideo, 6000);
+			  done = true;
+			}``
 		}
 		
-</script>		
-
-
+	
 		
-</div>
+		onYouTubeIframeAPIReady()
+		onPlayerReady()
+		loadVideoById({'videoId': 'KmDYXaaT9sA',
+		               'startSeconds': 0,
+		               'endSeconds': 6000,
+		               'suggestedQuality': 'large'});		
 
-<div class="page-body">
-	<div class="video">
-		<video width = "320" height = "240" controls>
-			<source src="movie.mp4" type="video/mp4">
-			Your browser does not support the video tag.
-		</video>    
-	</div>
+	</script>
+					   
+	<!-- player -->	
+				   
 </div>
-		
-	<p><strong>Note:</strong> The video tag is not supported in Internet Explorer 8 and earlier versions.</p>
-
-</div>
-{{ wtf.quick_form(form) }}
 {% endblock %}
+
