--- a/app/templates/lecture/class_n.html
+++ b/app/templates/lecture/class_n.html
@@ -6,12 +6,12 @@
 {% block page_content %}
 <div class="page-header">
 	<h1> {{ user.username }} </h1>
-	<h1> {{ user.codename }}
+	<h1> {{ user.codename }} </h1>
 		
 	{% if user.name or user.code %}
 	<p>
-		{% if user.name%}{{ user.name }}{% endif %}
-		{% if user.code %}{{ user.code }}{% endif %}
+		{% if user.username%}{{ user.username }}{% endif %}
+		{% if user.usercode %}{{ user.codename }}{% endif %}
 	</p>
 	{% endif %}
 	<!-- {% if current_user.is_administrator() %}
@@ -22,38 +22,39 @@
 </div>
 
 
-<!--vdieo -->
+<!--video -->
 <div class="page-body">
     <!-- 1. The <iframe> (and video player) will replace this <div> tag. -->
-    <div id="player"></div>
-		<script>
+	<iframe id="player" type="text/html" width="1024" height="576"
+	  src="https://www.youtube.com/embed/KmDYXaaT9sA" frameborder="0" allowfullscreen></iframe>
+	  	  
+	<script>
+	
 		// 2. This code loads the IFrame Player API code asynchronously.
 		var tag = document.createElement('script');
 		tag.src = "https://www.youtube.com/iframe_api";
 		var firstScriptTag = document.getElementsByTagName('script')[0];
 		firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
-		
-		
-		
+	
+	
+	
 		// 3. This function creates an <iframe> (and YouTube player)
 		        //    after the API code downloads.
-	    var player;
+		var myVideoId = 'KmDYXaaT9sA';
+		var player;	
 	    function onYouTubeIframeAPIReady() {
-	      player = new YT.Player('player', {
-	        height: '585',
-	        width: '960',
-	        videoId: 'KmDYXaaT9sA',
-	        events: {ㄴ
-	          'onReady': onPlayerReady,
-	          'onStateChange': onPlayerStateChange
-	        }
-	      });
-	    }
+			player = new YT.Player('player', {
+				events: {
+					'onReady': onPlayerReady,
+					'onStateChange': onPlayerStateChange
+				}
+			});
+		}
 
 
 	    // 4. The API will call this function when the video player is ready.
 	    function onPlayerReady(event) {
-	      event.target.playVideo();
+			event.target.playVideo();
 	    }
 
 		// 5. The API calls this function when the player's state changes.
@@ -61,26 +62,40 @@
 		//    the player should play for six seconds and then stop.
 		var done = false;
 		function onPlayerStateChange(event) {
+		
 			if (event.data == YT.PlayerState.PLAYING && !done) {
 				//setTimeout(stopVideo)(X) when video all played
 				//show "next"	
-		  	  setTimeout(stopVideo, 6000);
-			  done = true;
-			}``
+				setTimeout(stopVideo, 6000);
+				// console.log("Player's final state: +" + event)
+				done = true;
+			
+			}	
+			else :
+				console.log("Player's new state: +" + event)
+			
+			
 		}
 		
-	
-		
-		onYouTubeIframeAPIReady()
-		onPlayerReady()
-		loadVideoById({'videoId': 'KmDYXaaT9sA',
-		               'startSeconds': 0,
-		               'endSeconds': 6000,
-		               'suggestedQuality': 'large'});		
+		function stopVideo(){
+			player.stopVideo();
+		}
+
+
+		// onYouTubeIframeAPIReady();
+		// loadVideoById({'videoId': myVideoId,
+		//                'startSeconds': 0,		               //
+		//                // 'endSeconds': 6000,
+		//                'suggestedQuality': 'large'});
+		// player.playVideo():Void;
+		// // player.onPlayerStateChange();
 
 	</script>
-					   
-	<!-- player -->	
+
+	<div>
+		Steven
+	</div>
+	</p>			
 				   
 </div>
 {% endblock %}
