--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -30,14 +30,15 @@
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li><a href="{{ url_for('main.index') }}">Home</a></li>
-                {% if current_user.is_authenticated %}
+				<li><a href="{{ url_for('main.index') }}">Home</a></li>
+				{% if current_user.is_authenticated %}
                 <li><a href="{{ url_for('main.user', username = current_user.username) }}">Lecture</a></li>
                 {% endif %}
 					</li> 
             </ul>
 			<ul class="nav navbar-nav navbar-right">
 				{% if current_user.is_authenticated %}
+				<li> <a href="{{ url_for('main.index') }}"> {{ current_user.username }} </a></li>
 				<li><a href="{{ url_for('auth.logout')}}">Log Out</a></li>
 				{% else %}
 				<li><a href="{{ url_for('auth.login')}}">Log In</a></li>
