--- a/app/templates/lecture/class_n2.html
+++ b/app/templates/lecture/class_n2.html
@@ -1,96 +1,123 @@
-{% extends "base.html" %}
-{% import "bootstrap/wtf.html" as wtf %}
-<a href="class_n.html" id="" title="class_n">class_s</a>
+{% extends "lecture/class_n.html" %}
 {% block title %}Class_N2{% endblock %}
 
-{% block page_content %}
-<div class="page-header">
-	<h1> {{ user.username }} </h1>
-	<h1> {{ user.codename }} </h1>
+
+
+
+
+{% block content %}
+	{% block socialPart %}
+	{% endblock %}	
+	
+
+
+
+	{% block playerPart %}
+	<!--video -->
+	<div class="page-body" style = "margin:10px; padding: 10px; overflow: hidden; border: none; text-align: center;">
+		<iframe id="myPlayer" width="1024" height="576"
+		  src="https://www.youtube.com/embed/l0-VHYKXUJg?enablejsapi=1" frameborder="0" align="center">
+		</iframe>	  
+
+
+		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js"></script>
+		<script type="text/javascript">
+			console.log("ready!");
+
+
+			if (typeof(YT) == 'undefined' || typeof(YT.Player) == 'undefined') {
+
+
+				var tag = document.createElement('script');
+				tag.src = "https://www.youtube.com/iframe_api";
+				var firstScriptTag = document.getElementsByTagName('script')[0];
+				firstScriptTag.parentNode.insertBefore(tag,firstScriptTag);
+
+				window.onYoutubePlayerAPIReady = function() {
+					onYouTubePlayer();
+				};
+			}
+
+			else {
+				onYouTubePlayer();
+			}
 		
-	{% if user.name or user.code %}
-	<p>
-		{% if user.username%}{{ user.username }}{% endif %}
-		{% if user.usercode %}{{ user.codename }}{% endif %}
-	</p>
-	{% endif %}
-	{% if current_user.is_administrator() %}
-	<p><a href="mailto:{{ user.email }}">{{ user.email }}{% endif %}
- </a></p>
-	<p> 
-	</p>
-</div>
 
 
-<!--video -->
-<div class="page-body">
-    <!-- 1. The <iframe> (and video player) will replace this <div> tag. -->
-	<iframe id="player" type="text/html" width="1024" height="576"
-	  src="https://www.youtube.com/embed/KmDYXaaT9sA" frameborder="0" allowfullscreen></iframe>
-	  	  
-	<script>
+			var player;	
+			console.log("player created")
 	
-		// 2. This code loads the IFrame Player API code asynchronously.
-		var tag = document.createElement('script');
-		tag.src = "https://www.youtube.com/iframe_api";
-		var firstScriptTag = document.getElementsByTagName('script')[0];
-		firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
+		    function onYouTubeIframeAPIReady() {
+				player = new YT.Player('myPlayer', {
+					events: { 'onStateChange': onPlayerStateChange }
+				});
+			}
+			console.log('Video API is loaded.')
+
+
+			//onPlayerStateChange
+			function onPlayerStateChange(event) {
+				if (event) {
+					switch(event) {
+						case 0:
+							console.log('video ended');
+							break;
+						case 1:
+							console.log('video playing from '+player.getCurrentTime());
+							break;
+						case 2:
+							console.log('video paused at '+player.getCurrentTime());
+							break;
+					}
 	
-	
-	
-		// 3. This function creates an <iframe> (and YouTube player)
-		        //    after the API code downloads.
-		var myVideoId = 'nyxHw_U1r4c';
-		var player;	
-	    function onYouTubeIframeAPIReady() {
-			player = new YT.Player('player', {
-				events: {
-					'onReady': onPlayerReady,
-					'onStateChange': onPlayerStateChange
 				}
-			});
-		}
+				console.log("set!");
+			}
+	
+			console.log("onPlayerStateChange set");
 
 
-	    // 4. The API will call this function when the video player is ready.
-	    function onPlayerReady(event) {
-			event.target.playVideo();
-	    }
 
-		// 5. The API calls this function when the player's state changes.
-		//    The function indicates that when playing a video (state=1),
-		//    the player should play for six seconds and then stop.
-		var done = false;
-		
-		
-		//console.log -> NO (JAVASCRIPT STOPs)
-		function onPlayerStateChange(event) {
-			if (event.data == YT.PlayerState.PLAYING && !done) {
-				//setTimeout(stopVideo)(X) when video all played
-				//show "next"	
-				// setTimeout(stopVideo,);
-				console.log("Player's final state: +" + event)
-				done = true;
-			}	
-			else :
-				console.log("Player's new state: +" + event)
-		}
-		
-		
-		//move to next page	
-		player.addEventListener("onStateChange", function(state){
-		    if(state === 0){
-		        redirect
-		    }
-		});
+			function record(data){
+			    // Do what you want with your data
+				var p = document.createElement("p");
+				p.appendChild(document.createTextNode(data));
+				document.body.appendChild(p);
+			}
+
+
+
+
+
+			onPlayerStateChange(event);
+
 
 	</script>
-
-	<div>
-		<p> 2 </p>
 	</div>
-	</p>			
-				   
-</div>
+	{% endblock %}
+	
+	
+	
+	
+	
+	
+	
+	
+	{% block nextPhase %}
+	<div id = button style = "margin:10px; padding: 10px; overflow: hidden; border: none; text-align: center;">
+		<br>
+		<br>
+		<a href = 'class_s3.html'><button type="button" class="nextPhase" style="float: center;"> Next </button></a>
+
+	</div>
+	{% endblock %}
+	
 {% endblock %}
+
+
+
+
+
+
+
 
