--- a/app/templates/lecture/class_s.html
+++ b/app/templates/lecture/class_s.html
@@ -1,16 +1,18 @@
 {% extends "base.html" %}
-{% import "bootstrap/wtf.html" as wtf %}
-<a href="class_s.html" id="" title="class_s">class_s</a>
 {% block title %}Class_S{% endblock %}
 
-{% block page_content %}
+
+
+
+
+{% block userPart %}
 <div class="page-header">
 	<h1> {{ user.username }} </h1>
 	<h1> {{ user.codename }} </h1>
 		
 	{% if user.name or user.code %}
 	<p>
-		{% if user.username%}{{ user.username }}{% endif %}
+		{% if user.username %}{{ user.username }}{% endif %}
 		{% if user.usercode %}{{ user.codename }}{% endif %}
 	</p>
 	{% endif %}
@@ -20,110 +22,128 @@
 	<p> 
 	</p>
 </div>
-
-
-
-<!-- pinging  -->
-<!--div class : social -->
-<div class="social">
-	
-	<iframe id = "social" type="text/html" width="70" height="600" style="border:none" src = "http://127.0.0.1:5000/lecture/social" scrolling = no align = "left">
-	</iframe>	
-</div>
-	
-	
-
-<!--video -->
-<div class="page-body">
-	<iframe id="myPlayer" type="text/html" width="1024" height="576"
-	  src="https://www.youtube.com/embed/KmDYXaaT9sA" frameborder="0" align="right">
-	  </iframe>		  
+{% endblock %}
 
 
 
 <!--api -->
-		  
-	<script>
-	// 2. This code loads the IFrame Player API code asynchronously.
-	var tag = document.createElement('script');
-	tag.src = "https://www.youtube.com/iframe_api";
-	var firstScriptTag = document.getElementsByTagName('script')[0];
-	firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
+
+{% block content %}
+
+
+	{% block socialPart %}
+	<!-- pinging  -->
+	<!--div class : social -->
+	<div class="social">
+		<iframe id = "social" type="text/html" width="70" height="600" style="border:none" src = "http://127.0.0.1:5000/lecture/social" scrolling = no align = "left">
+		</iframe>	
+	</div>
+	
+	{% endblock %}
 
 
 
-	// 3. This function creates an <iframe> (and YouTube player)
-	        //    after the API code downloads.
-	var player;	
-    function onYouTubeIframeAPIReady() {
-		player = new YT.Player("myPlayer", {
-			events: {
-				// 'onReady': onPlayerReady(),
-				'onStateChange': onPlayerStateChange(),
+	{% block playerPart %}
+	<!--video -->  
+	<div class="page-body" style = "margin:10px; padding: 10px; overflow: hidden; border: none; text-align: center;">
+		<iframe id="myPlayer" width="1024" height="576"
+		  src="https://www.youtube.com/embed/KmDYXaaT9sA" frameborder="0" align="center">
+		</iframe>	  
+
+
+		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js"></script>
+		<script type="text/javascript">
+			console.log("ready!");
+
+
+			if (typeof(YT) == 'undefined' || typeof(YT.Player) == 'undefined') {
+
+
+				var tag = document.createElement('script');
+				tag.src = "https://www.youtube.com/iframe_api";
+				var firstScriptTag = document.getElementsByTagName('script')[0];
+				firstScriptTag.parentNode.insertBefore(tag,firstScriptTag);
+
+				window.onYoutubePlayerAPIReady = function() {
+					onYouTubePlayer();
+				};
 			}
-		});
-	}
-	
-	// var playerReady = false;
-	// function onPlayerReady(event) {
-	// 	playerReady = true;
-	// }
-	
 
-	// // 4. The API will call this function when the video player is ready.
-// 		function onPlayerReady(event) {
-// 		  var embedCode = event.target.getVideoEmbedCode();
-// 		  event.target.playVideo();
-// 		  if (document.getElementById('embed-code')) {
-// 		    document.getElementById('embed-code').innerHTML = embedCode;
-// 		  }
-// 		}
-//
-	// record event
-	var done = false;
-	function onPlayerStateChange(event) {
-		switch (event.data) {
-			case YT.PlayerState.UNSTARTED:							
-				console.log('unstarted');
-				break;
-			case YT.PlayerState.ENDED:
-				console.log('ended');
-				alert ("Please move to the next page!")
-				break;
-			case YT.PlayerState.PLAYING:
-				console.log('playing');
-				break;
-			case YT.PlayerState.PAUSED:
-				console.log('paused');
-				break;
-			case YT.PlayerState.BUFFERING:
-				console.log('buffering : ');
-				break;
-			case YT.PlayerState.CUED:
-				console.log('video cued : ');
-				break;
-			default:
-				break;
-		}
-	}
-	
-	
-	
-	//finish -> move to next phase
-	var done = false;
-	function nextPhase(){
-		if (event.data === 0) {
-			alert('Please move to next page!');
-			console.log("Video has ended.")
-		}
-	}
+			else {
+				onYouTubePlayer();
+			}
+		
 
+
+			var player;	
+			console.log("player created")
 	
-	onPlayerStateChange();
-	nextPhase();
-	// submit 
-	</script>				   
-</div>
+		    function onYouTubeIframeAPIReady() {
+				player = new YT.Player('myPlayer', {
+					events: { 'onStateChange': onPlayerStateChange }
+				});
+			}
+			console.log('Video API is loaded.')
+
+
+			//onPlayerStateChange
+			function onPlayerStateChange(event) {
+				if (event) {
+					switch(event) {
+						case 0:
+							console.log('video ended');
+							break;
+						case 1:
+							console.log('video playing from '+player.getCurrentTime());
+							break;
+						case 2:
+							console.log('video paused at '+player.getCurrentTime());
+							break;
+					}
+	
+				}
+				console.log("set!");
+			}
+	
+			console.log("onPlayerStateChange set");
+
+
+
+			function record(data){
+			    // Do what you want with your data
+				var p = document.createElement("p");
+				p.appendChild(document.createTextNode(data));
+				document.body.appendChild(p);
+			}
+
+
+
+
+
+			onPlayerStateChange(event);
+
+
+	</script>
+	</div>
+	{% endblock %}
+	
+	
+	
+	{% block nextPhase %} 
+	<div id = button style = "margin:10px; padding: 10px; overflow: hidden; border: none; text-align: center;">
+		<br>
+		<br>
+		<a href = 'class_n2.html'><button type="button" class="nextPhase" > Next </button></a>
+
+	</div>
+	{% endblock %}
+	
 {% endblock %}
+
+
+
+
+
+
 
 
