--- a/app/templates/lecture/class_s3.html
+++ b/app/templates/lecture/class_s3.html
@@ -1,22 +1,29 @@
-{% extends "lecture/class_s.html" %}
-{% block title %}Class_N{% endblock %}
+{% extends "/lecture/class_s.html" %}
+{% block title %}Class_S3{% endblock %}
 
 
-
+ 
 
 
 {% block content %}
-	{% block socialPart %}
-	{% endblock %}	
-	
 
+
+	{% block socialPart %}
+	<!-- pinging  -->
+	<!--div class : social -->
+	<div class="social">
+		<iframe id = "social" type="text/html" width="70" height="600" style="border:none" src = "http://127.0.0.1:5000/lecture/social" scrolling = no align = "left">
+		</iframe>	
+	</div>
+	
+	{% endblock %}
 
 
 	{% block playerPart %}
 	<!--video -->
 	<div class="page-body" style = "margin:10px; padding: 10px; overflow: hidden; border: none; text-align: center;">
 		<iframe id="myPlayer" width="1024" height="576"
-		  src="https://www.youtube.com/embed/KmDYXaaT9sA" frameborder="0" align="center">
+		  src="https://www.youtube.com/embed/Rd6PPSmFwA8?enablejsapi=1" frameborder="0" align="center">
 		</iframe>	  
 
 
@@ -107,8 +114,7 @@
 	<div id = button style = "margin:10px; padding: 10px; overflow: hidden; border: none; text-align: center;">
 		<br>
 		<br>
-		<a href = 'class_s2.html'><button type="button" class="nextPhase" style="float: center;"> Next </button></a>
-
+		<a href="summary.html"><button type="button" class="nextPhase" style="float: center;"> Summary </button></a>
 	</div>
 	{% endblock %}
 	
