--- a/app/templates/lecture/class_home.html
+++ b/app/templates/lecture/class_home.html
@@ -37,7 +37,7 @@
 	
 	<div id = button style = "margin:50px; padding: 50px; overflow: hidden; border: none; text-align: center;">
 		
-		<a href="survey/pre_survey.html"><button type="button" class="0" style = "margin:20px; padding:20px; overflow: hidden; border: none; text-align: center;"> Pre-questionnaire </button></a>
+		<a href="/survey/pre_survey.html"><button type="button" class="0" style = "margin:20px; padding:20px; overflow: hidden; border: none; text-align: center;"> Pre-questionnaire </button></a>
 		
 		<br>
 		
