--- a/app/templates/lecture/class_n.html
+++ b/app/templates/lecture/class_n.html
@@ -16,7 +16,7 @@
 	<!--video -->
 	<div class="page-body" style = "margin:10px; padding: 10px; overflow: hidden; border: none; text-align: center;">
 		<iframe id="myPlayer" width="1024" height="576"
-		  src="https://www.youtube.com/embed/KmDYXaaT9sA" frameborder="0" align="center">
+		  src="https://www.youtube.com/embed/NUuqNzB5nUo" frameborder="0" align="center">
 		</iframe>	  
 
 
