--- a/app/templates/lecture/class_s2.html
+++ b/app/templates/lecture/class_s2.html
@@ -43,7 +43,7 @@
 	<!--video -->
 	<div class="page-body" style = "margin:10px; padding: 10px; overflow: hidden; border: none; text-align: center;">
 		<iframe id="myPlayer" width="1024" height="576"
-		  src="https://www.youtube.com/embed/NCwvxnhduHU?enablejsapi=1" frameborder="0" align="center">
+		  src="https://www.youtube.com/embed/eDY5oCxWdAs?enablejsapi=1" frameborder="0" align="center">
 		</iframe>	  
 
 
