--- a/app/templates/lecture/class_s3.html
+++ b/app/templates/lecture/class_s3.html
@@ -9,8 +9,6 @@
 
 
 	{% block socialPart %}
-	<!-- pinging  -->
-	<!--div class : social -->
 	<div class="social">
 		<iframe id = "social" type="text/html" width="70" height="600" style="border:none" src = "http://127.0.0.1:5000/lecture/social" scrolling = no align = "left">
 		</iframe>	
@@ -23,7 +21,7 @@
 	<!--video -->
 	<div class="page-body" style = "margin:10px; padding: 10px; overflow: hidden; border: none; text-align: center;">
 		<iframe id="myPlayer" width="1024" height="576"
-		  src="https://www.youtube.com/embed/Rd6PPSmFwA8?enablejsapi=1" frameborder="0" align="center">
+		  src="https://www.youtube.com/embed/_-sEB3dHWIE?enablejsapi=1" frameborder="0" align="center">
 		</iframe>	  
 
 
@@ -110,11 +108,14 @@
 	
 	
 	
+	
 	{% block nextPhase %}
 	<div id = button style = "margin:10px; padding: 10px; overflow: hidden; border: none; text-align: center;">
 		<br>
 		<br>
-		<a href="summary.html"><button type="button" class="nextPhase" style="float: center;"> Summary </button></a>
+		<a href = 'class_n4.html'><button type="button" class="nextPhase" style="float: center;"> Next </button></a>
+
+
 	</div>
 	{% endblock %}
 	
