--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -30,8 +30,7 @@
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-				<li><a href="{{ url_for('main.index') }}">Home</a></li>
-				{% if current_user.is_authenticated %}
+s				{% if current_user.is_authenticated %}
                 <li><a href="{{ url_for('main.user', username = current_user.username) }}">Lecture</a></li>
                 {% endif %}
 					</li> 
