--- a/app/templates/lecture/class_n4.html
+++ b/app/templates/lecture/class_n4.html
@@ -1,5 +1,5 @@
 {% extends "lecture/class_n.html" %}
-{% block title %}Class_N3{% endblock %}
+{% block title %}Class_N4{% endblock %}
 
 
 
@@ -16,7 +16,7 @@
 	<!--video -->
 	<div class="page-body" style = "margin:10px; padding: 10px; overflow: hidden; border: none; text-align: center;">
 		<iframe id="myPlayer" width="1024" height="576"
-		  src="https://www.youtube.com/embed/_-sEB3dHWIE?enablejsapi=1" frameborder="0" align="center">
+		  src="https://www.youtube.com/embed/yPHRf_Sm2mI?enablejsapi=1" frameborder="0" align="center">
 		</iframe>	  
 
 
@@ -105,15 +105,13 @@
 	
 	{% block nextPhase %}
 	<div id = button style = "margin:10px; padding: 10px; overflow: hidden; border: none; text-align: center;">
-		<br>
-		<br>
-		<a href = 'class_s4.html'><button type="button" class="nextPhase" style="float: center;"> Next </button></a>
-
+		<a href="summary.html"><button type="button" class="nextPhase" style="float: center;"> Summary </button></a>
 
 	</div>
 	{% endblock %}
 	
 {% endblock %}
+
 
 
 
