--- a/app/templates/survey/postSurvey_b.html
+++ b/app/templates/survey/postSurvey_b.html
@@ -1,6 +1,6 @@
-{% from "survey/macro.html" import render_field %}
-{% import "bootstrap/wtf.html" as wtf %}
 {% extends "base.html" %}
+{% import "bootstrap/wtf.html" as wtf %}
+{% from "survey/macro.html" import render_field %}
 
 {% block content%}
 	<div class="col-lg-12 well" >
@@ -29,7 +29,7 @@
 			{{ render_field(form.annoy_b) }}
 			{{ render_field(form.frustrated_b) }}
 			{{ render_field(form.gender) }}
-			{{ render_field(form.age, class="form-control") }}
+			{{ render_field(form.age) }}
 
   			<p><input type=submit value=Save>  
 			
@@ -37,11 +37,13 @@
 				<div id = button class = "col-md-12" style = "margin:10px; padding: 10px; overflow: hidden; border: none; text-align: center;">
 					<br>
 					<br>
-					<a href="/survey/finish_survey"><button type="button" class="nextPhase" > Next </button></a>
+					<a href="/survey/survey_final.html"><button type="button" class="nextPhase" > Next </button></a>
 				</div>
 				{% endblock %}
 			
 			</form>
 		</div>		
-
-		{% endblock %}
+		{% endblock %}	
+	</div>	
+{% endblock %}
+		
